<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hammer.task_9_sqlite.ui.MainActivity">

    <EditText
        android:id="@+id/edit_text_main_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_main_put_name"/>
    
    <EditText
        android:id="@+id/edit_text_main_surname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_main_name"
        android:hint="@string/txt_main_put_surname"/>

    <EditText
        android:id="@+id/edit_text_main_phone_number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_main_surname"
        android:hint="@string/txt_main_put_number"/>

    <EditText
        android:id="@+id/edit_text_main_mail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_main_phone_number"
        android:hint="@string/txt_main_put_mail"/>

    <EditText
        android:id="@+id/edit_text_main_skype"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_main_mail"
        android:hint="@string/txt_main_put_skype"/>
    
    <Button
        android:id="@+id/btn_main_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/txt_btn_save"/>

</RelativeLayout>
